--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,22 @@
     <fragment
         android:id="@+id/movieListFragment"
         android:name="com.example.paymobmovieapp.presentation.home.MovieHomeFragment"
-        android:label="Movie List"></fragment>
+        android:label="Movie List">
+        <action
+            android:id="@+id/action_movieListFragment_to_movieDetails"
+            app:destination="@id/movieDetails" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetails"
+        android:name="com.example.paymobmovieapp.presentation.details.MovieDetailsFragment"
+        android:label="fragment_movie_details"
+        tools:layout="@layout/fragment_movie_details"
+        >
+        <argument
+            android:name="movie"
+            app:argType="com.example.paymobmovieapp.domain.model.Movie" />
+
+    </fragment>
 
 
 </navigation>
